<resources>
    <string name="app_name">Syndesi App</string>

    <string name="sensors">Sensors Status</string>
    <string name="sensors_disabled">Enable sensors in the settings</string>

    <string name="loc_title">Office</string>
    <string name="loc_display">You are currently located in office</string>
    <string name="loc_scanning">Localization in progress...</string>
    <string name="loc_noperm">Please give this app access to your location in the settings</string>
    <string name="loc_disabled">Enable the localization in the settings</string>
    <string name="loc_button">Relocate</string>

    <string name="server">Server Response</string>
    <string name="connection_no_server_set">Set server address in the settings</string>
    <string name="connection_no_data">No data to send</string>
    <string name="connection_ok">Server OK</string>
    <string name="connection_error">Error connecting to server</string>

    <string name="action_environment">Environment Control</string>
    <string name="title_environment">Environment Control</string>
    <string name="automation">Automation Status</string>
    <string name="automation_no_change">Temperature and light levels are good: nothing to do!</string>
    <string name="automation_disabled">Enable the automation in the settings</string>

    <string name="action_training">Localization Training</string>
    <string name="title_training">Localization Training</string>
    <string name="training_title">WiFi Mapping</string>
    <string name="form_room_number">Room</string>
    <string name="form_training_button_start">Start</string>
    <string name="form_training_button_stop">Stop</string>
    <string name="form_training_button_reset">Reset</string>
    <string name="training_message">RSS Readings</string>
    <string name="training_warning">Your current training file will be overwritten if you click reset!</string>

    <string name="preferences_saved">Preferences saved</string>
    <string name="preferences_empty_fields">Please fill in all the fields!</string>
    <string name="pref_title">Preferences</string>
    <string name="form_light_target">Preferred light level</string>
    <string name="form_temp_target">Preferred temperature</string>
    <string name="form_save_button">Save</string>

    <string name="action_controller">Nodes Manager</string>
    <string name="title_controller">Nodes Manager</string>
    <string name="controller_node">Nodes</string>
    <string name="controller_no_nodes">No nodes detected on the server</string>
</resources>
