<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tcslab.syndesiapp.MainActivity">

    <item
        android:id="@+id/action_environment"
        android:title="@string/action_environment"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_controller"
        android:title="@string/action_controller"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_training"
        android:title="@string/action_training"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
